--- a/app/globals.css
+++ b/app/globals.css
@@ -106,6 +106,7 @@
     --primary-foreground: 240 5.9% 10%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
+    --muted-selected: 240 3.7% 16%;
     --muted: 240 3.7% 60%;
     --muted-foreground: 240 5% 64.9%;
     --accent: 240 3.7% 15.9%;
